[metadata]
name = stactools-cop-dem
version = attr: stactools.cop_dem.__version__
description = stactools package for Copernicus Digital Elevation Model
long_description = file: README.md
long_description_content_type = text/markdown
author = Justin Fisk
author_email = misterfisk@gmail.com
url = https://github.com/stactools-packages/cop-dem
project_urls =
    Documentation = https://stactools-cop-dem.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/cop-dem/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    Copernicus
    dem
    elevation
    raster
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools[s3] >= 0.4.0

[options.packages.find]
where = src
